Container and overflow issues

--- a/webapp/src/app/(authenticated)/home/styles.modules.css
+++ b/webapp/src/app/(authenticated)/home/styles.modules.css
@@ -15,13 +15,7 @@
     padding-bottom: 3vh;
     padding-left: 1vh;
 }
-.search-bar-container {
-    width: 60%;
-    /* margin: auto; */
-    /* display: flex;
-    flex-direction: column; */
-    /* min-width: 300px; */
-}
+
 .overview-container {
     width: 30%;
 }
