--- a/webapp/src/app/(authenticated)/mflg/[productId]/style.css
+++ b/webapp/src/app/(authenticated)/mflg/[productId]/style.css
@@ -16,20 +16,6 @@ html, body {
   height: 100%;
 }
 
-body {
-  font-family: "Myriad Pro", sans-serif;
-  font-size: 100%;
-  line-height: 1.5;
-  color: #787878;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-@media (max-width: 600px) {
-  body {
-    font-size: 70%;
-  }
-}
-
 a {
   text-decoration: none;
   color: #08c;
