--- a/webapp/src/app/(authenticated)/mflg/style.css
+++ b/webapp/src/app/(authenticated)/mflg/style.css
@@ -7,7 +7,6 @@
 body {
   height: 100vh;
   place-items: center;
-  overflow: hidden;
 }
 
 main {
